# shrike-7

./: .gitignore  .markdownlint.json  BENCHMARKS.md  LICENSE  README.md  pyproject.toml
eval/: download_common_voice_vi.py  eval_asr.py  eval_assistant_runtime.py  eval_knowledge_memory.py  eval_llm.py  eval_tts.py
local/: README.md  __init__.py  boh_manual_review.py  build_boh.py  calibrate_asr_confidence.py  calibrate_thresholds.py  collect_noise.py  config.py  download_fleurs.py  eval_table7.py
notebooks/: 00_colab_setup.ipynb  01_noise_data_collection.ipynb  02_build_vietnamese_boh.ipynb  README.md
notes/: asr_research.md
scripts/: audition_omnivoice_voice.py  demo_assistant_runtime.py  demo_endpoint_record.py  demo_knowledge_llm.py  demo_memory_chat.py  demo_streaming.py  demo_text_pipeline.py  demo_voice_loop.py  download_llm.py  download_phogpt.py  download_phowhisper.py  freeze_omnivoice_voice.py  init_knowledge_vault.py  record_test_audio.py  seed_coach_knowledge.py  smoke_test_asr.py  smoke_test_knowledge.py  smoke_test_llm.py  smoke_test_tts.py  test_vad.py
shrike7/: __init__.py  cli.py
tests/: test_asr_registry.py  test_assistant_runtime.py  test_audio_out.py  test_boh.py  test_deloop.py  test_demo_voice_loop_profiles.py  test_download_llm.py  test_download_phowhisper.py  test_endpoint.py  test_eval_asr.py  test_eval_assistant_runtime.py  test_eval_knowledge_memory.py  test_eval_llm.py  test_eval_tts.py  test_guardrails.py  test_hallucination_heuristics.py  test_knowledge_context.py  test_knowledge_markdown_vault.py  test_llamacpp_runner.py  (+19 more)
(+64 files in other folders)
